actualizacion del nav

--- a/css/index2.css
+++ b/css/index2.css
@@ -8,7 +8,18 @@ body {
     font-size: 1.2rem;
     line-height: 1.2em;
 }
+
 /* aqui commienza espacio logo y barra de nav */
+.header {
+    padding:0.67em;
+    text-align: center;
+    background: #1abc9c;
+    color: white;
+    position:fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+}
 .container {
     display: flex;
     justify-content: space-between;
@@ -28,18 +39,10 @@ p{font-family: Arial, Helvetica, sans-serif;
     float:left;
 }
 
-.header {
-    padding:0.67em;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-    position:fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-}
+
 .header a{
     text-decoration: none;
+    color: white;
 }
 .logo-nav{
     display: flex;
@@ -48,6 +51,10 @@ p{font-family: Arial, Helvetica, sans-serif;
     flex-wrap: wrap;
 }
 /* barra de navegacion */
+.menu-icon{
+    color: white;
+    display: none;
+}
 .nav {
     margin-top: 1rem;
     display: flex;
@@ -68,10 +75,10 @@ p{font-family: Arial, Helvetica, sans-serif;
     padding: 0.7em ;
     text-decoration: none;
     text-align: center;
-    transition: all 0.8s;
+    transition: all 0.8 linear;
 }
 /* Change color on hover */
-.nav a:hover {
+.nav ul li a:hover {
     background-color: rgb(48, 175, 80);
     color: rgb(33, 21, 65);
 }
