--- a/css/index2.css
+++ b/css/index2.css
@@ -13,12 +13,17 @@ body {
 .header {
     padding:0.67em;
     text-align: center;
-    background: #1abc9c;
+    background: hsl(165, 2%, 33%);
     color: white;
     position:fixed;
     left: 0;
     top: 0;
     right: 0;
+}
+.logo{
+    font-size: 1.5em;
+    padding: 0.5em 2em;
+    letter-spacing: 0.3em;
 }
 .container {
     display: flex;
