agrego jq para el menu celular se  muestre

--- a/css/index2.css
+++ b/css/index2.css
@@ -149,6 +149,9 @@ b:hover{color:rgb(22, 59, 221);}
     .nav ul{
         display: none;
     }
+    .nav ul.show{
+        display: block;
+    }
     .row,
     .nav {
         flex-direction: column;
