--- a/css/index2.css
+++ b/css/index2.css
@@ -34,6 +34,10 @@ body {
 p{font-family: Arial, Helvetica, sans-serif;
     padding-top: 9rem;
 }
+h1{
+    color: #000;
+    padding-top: 4em;
+}
 
 .logo a{
     padding: 0.2rem;
