--- a/CSS/index2.css
+++ b/CSS/index2.css
@@ -157,7 +157,7 @@ b:hover{color:rgb(22, 59, 221);}
         display: block;
     }
     .row,
-    .nav {
+    {
         flex-direction: column;
     }
 }
