--- a/css/index2.css
+++ b/css/index2.css
@@ -150,14 +150,25 @@ b:hover{color:rgb(22, 59, 221);}
         display: block;
         cursor: pointer;
     }
+    nav{
+        .width: 100%;
+        margin-top: 1rem;
+    }
     .nav ul{
         display: none;
     }
     .nav ul.show{
         display: block;
+    }.nav ul li{
+        display:block;
     }
-    .row,
-    .nav {
-        flex-direction: column;
-    }
+    display:block;
+    padding: 0.5rem ;
+    text-decoration: none;
+    transition: all 0.6s linear ;
 }
+.nav ul li a:hover{
+    background: #ff00e6;
+    border-radius: 1em;
+    }
+    
